[gd_scene load_steps=14 format=2]

[ext_resource path="res://Start/BG.gd" type="Script" id=1]
[ext_resource path="res://Assets/canvas.png" type="Texture" id=2]
[ext_resource path="res://Assets/Nebula.png" type="Texture" id=3]
[ext_resource path="res://starsBack.png" type="Texture" id=4]
[ext_resource path="res://starsPar.png" type="Texture" id=5]
[ext_resource path="res://Start/StartScreen.gd" type="Script" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.117647, 0.67451, 0, 0.266667 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.117647, 0.67451, 0, 0.0941176 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.00392157, 0.490196, 0, 1 )

[sub_resource type="StyleBoxFlat" id=4]
content_margin_left = 50.0
content_margin_right = 50.0
content_margin_top = 30.0
content_margin_bottom = 30.0
bg_color = Color( 0.117647, 0.67451, 0, 0 )

[sub_resource type="DynamicFontData" id=5]
font_path = "res://Assets/Fonts/SourceCodePro-Medium.ttf"

[sub_resource type="DynamicFont" id=6]
size = 20
font_data = SubResource( 5 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.117647, 0.67451, 0, 0.266667 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="StartScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="Canvas" type="ParallaxBackground" parent="BG"]
offset = Vector2( 960, 540 )
transform = Transform2D( 1, 0, 0, 1, 960, 540 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="BG/Canvas"]
motion_mirroring = Vector2( 1920, 1080 )

[node name="Sprite" type="Sprite" parent="BG/Canvas/ParallaxLayer"]
texture = ExtResource( 2 )

[node name="Nebula" type="ParallaxBackground" parent="BG"]
offset = Vector2( 960, 540 )
transform = Transform2D( 1, 0, 0, 1, 960, 540 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="BG/Nebula"]

[node name="Sprite" type="Sprite" parent="BG/Nebula/ParallaxLayer"]
texture = ExtResource( 3 )

[node name="Layer1" type="ParallaxBackground" parent="BG"]
offset = Vector2( 960, 540 )
transform = Transform2D( 1, 0, 0, 1, 960, 540 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="BG/Layer1"]
motion_mirroring = Vector2( 1920, 1080 )

[node name="Sprite" type="Sprite" parent="BG/Layer1/ParallaxLayer"]
modulate = Color( 0.827451, 0.94902, 1, 1 )
texture = ExtResource( 4 )

[node name="Layer2" type="ParallaxBackground" parent="BG"]
offset = Vector2( 960, 540 )
transform = Transform2D( 1, 0, 0, 1, 960, 540 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="BG/Layer2"]
motion_mirroring = Vector2( 1920, 1080 )

[node name="Sprite" type="Sprite" parent="BG/Layer2/ParallaxLayer"]
modulate = Color( 1, 0.878431, 0.878431, 1 )
texture = ExtResource( 4 )
flip_v = true

[node name="Layer3" type="ParallaxBackground" parent="BG"]
offset = Vector2( 960, 540 )
transform = Transform2D( 1, 0, 0, 1, 960, 540 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="BG/Layer3"]
motion_mirroring = Vector2( 1920, 1080 )

[node name="Sprite" type="Sprite" parent="BG/Layer3/ParallaxLayer"]
texture = ExtResource( 5 )

[node name="MainMenu" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Panel" type="Panel" parent="MainMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -229.0
margin_top = -357.0
margin_right = 229.0
margin_bottom = 388.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="New" type="Button" parent="MainMenu/Panel/VBoxContainer"]
margin_right = 458.0
margin_bottom = 86.0
focus_mode = 0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.0784314, 1, 0, 0.564706 )
custom_colors/font_color_hover = Color( 0.0784314, 1, 0, 0.843137 )
enabled_focus_mode = 0
text = "New Game"

[node name="Load" type="Button" parent="MainMenu/Panel/VBoxContainer"]
margin_top = 90.0
margin_right = 458.0
margin_bottom = 176.0
focus_mode = 0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.0784314, 1, 0, 0.564706 )
custom_colors/font_color_hover = Color( 0.0784314, 1, 0, 0.843137 )
enabled_focus_mode = 0
text = "Load Game"

[node name="Host" type="Button" parent="MainMenu/Panel/VBoxContainer"]
margin_top = 180.0
margin_right = 458.0
margin_bottom = 266.0
focus_mode = 0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.0784314, 1, 0, 0.564706 )
custom_colors/font_color_hover = Color( 0.0784314, 1, 0, 0.843137 )
enabled_focus_mode = 0
text = "Host Game"

[node name="Join" type="Button" parent="MainMenu/Panel/VBoxContainer"]
margin_top = 270.0
margin_right = 458.0
margin_bottom = 356.0
focus_mode = 0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.0784314, 1, 0, 0.564706 )
custom_colors/font_color_hover = Color( 0.0784314, 1, 0, 0.843137 )
enabled_focus_mode = 0
text = "Join Game"

[node name="School" type="Button" parent="MainMenu/Panel/VBoxContainer"]
margin_top = 360.0
margin_right = 458.0
margin_bottom = 446.0
focus_mode = 0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.0784314, 1, 0, 0.564706 )
custom_colors/font_color_hover = Color( 0.0784314, 1, 0, 0.843137 )
enabled_focus_mode = 0
text = "Flight School"

[node name="Settings" type="Button" parent="MainMenu/Panel/VBoxContainer"]
margin_top = 450.0
margin_right = 458.0
margin_bottom = 536.0
focus_mode = 0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.0784314, 1, 0, 0.564706 )
custom_colors/font_color_hover = Color( 0.0784314, 1, 0, 0.843137 )
enabled_focus_mode = 0
text = "Settings"

[node name="Quit" type="Button" parent="MainMenu/Panel"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -86.0
focus_mode = 0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.0784314, 1, 0, 0.564706 )
custom_colors/font_color_hover = Color( 0.0784314, 1, 0, 0.843137 )
enabled_focus_mode = 0
text = "Exit Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewGame" type="Popup" parent="."]
visible = true
margin_right = 968.0
margin_bottom = 492.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="NewGame"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="NewGame/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -275.5
margin_top = -62.0
margin_right = 275.5
margin_bottom = 62.0
custom_constants/separation = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Select" type="HBoxContainer" parent="NewGame/Panel/VBoxContainer"]
margin_right = 551.0
margin_bottom = 24.0

[node name="Name" type="HBoxContainer" parent="NewGame/Panel/VBoxContainer/Select"]
margin_right = 396.0
margin_bottom = 24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="NewGame/Panel/VBoxContainer/Select/Name"]
margin_top = 5.0
margin_right = 92.0
margin_bottom = 19.0
text = "Faction Name:"

[node name="LineEdit" type="LineEdit" parent="NewGame/Panel/VBoxContainer/Select/Name"]
margin_left = 96.0
margin_right = 396.0
margin_bottom = 24.0
rect_min_size = Vector2( 300, 0 )

[node name="Color" type="HBoxContainer" parent="NewGame/Panel/VBoxContainer/Select"]
margin_left = 400.0
margin_right = 551.0
margin_bottom = 24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="NewGame/Panel/VBoxContainer/Select/Color"]
margin_top = 5.0
margin_right = 87.0
margin_bottom = 19.0
text = "Faction Color:"

[node name="ColorPicker" type="ColorPickerButton" parent="NewGame/Panel/VBoxContainer/Select/Color"]
margin_left = 91.0
margin_right = 151.0
margin_bottom = 24.0
rect_min_size = Vector2( 60, 0 )

[node name="Options" type="HBoxContainer" parent="NewGame/Panel/VBoxContainer"]
margin_top = 54.0
margin_right = 551.0
margin_bottom = 74.0
custom_constants/separation = 20
alignment = 1

[node name="MapSize" type="MenuButton" parent="NewGame/Panel/VBoxContainer/Options"]
margin_left = 118.0
margin_right = 187.0
margin_bottom = 20.0
text = "Map Size"
switch_on_hover = true

[node name="Enemies" type="MenuButton" parent="NewGame/Panel/VBoxContainer/Options"]
margin_left = 207.0
margin_right = 344.0
margin_bottom = 20.0
text = "Number of Factions"
switch_on_hover = true

[node name="Difficulty" type="MenuButton" parent="NewGame/Panel/VBoxContainer/Options"]
margin_left = 364.0
margin_right = 433.0
margin_bottom = 20.0
text = "Difficulty"
switch_on_hover = true

[node name="Start" type="Button" parent="NewGame/Panel"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -86.0
focus_mode = 0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.0784314, 1, 0, 0.564706 )
custom_colors/font_color_hover = Color( 0.0784314, 1, 0, 0.843137 )
enabled_focus_mode = 0
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="MainMenu/Panel/VBoxContainer/New" to="." method="_on_New_pressed"]
[connection signal="pressed" from="MainMenu/Panel/VBoxContainer/Host" to="." method="_on_Host_pressed"]
[connection signal="pressed" from="MainMenu/Panel/VBoxContainer/Join" to="." method="_on_Join_pressed"]
[connection signal="pressed" from="MainMenu/Panel/Quit" to="." method="_on_Quit_pressed"]
[connection signal="popup_hide" from="NewGame" to="." method="_on_NewGame_popup_hide"]
[connection signal="pressed" from="NewGame/Panel/Start" to="." method="_on_Start_pressed"]
